--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Welcome to Typescipt World!</h1>
-    <script src="./out/script.js"></script>
+    <script type="module" src="./out/script.js"></script>
 </body>
 </html>
